--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <srcipt src="main.js"></srcipt>
 <section class="about" id="about">
     <div class="about_img">
-        <img src="WhatsApp Image 2024-07-03 at 5.40.19 PM.jpeg" alt="profile">
+        <img src="https://avatars.githubusercontent.com/u/144920484?s=400&u=77af831d9c67e116be5c9aeee731f13bacf41a8d&v=4" alt="profile">
     </div>
     <div class="about-txt">
         <h2>About<span>Me </span> </h2>
